--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul>
         <li><img src="hlo.jpg" alt="logo" class="logo"></li>
     
-        <li><a href="/login/index.html" class="login">LOGIN</a></li>
+        <li><a href="https://log-innn.netlify.app/" class="login">LOGIN</a></li>
       
         <li><a href="#" class="fund">WeCare</a></li>
       </ul>
